# cpp.aster

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: aster.pc.in  install.cmake  prelude.cmake
include/aster/: aster.hpp  compile.hpp  detail.hpp  entry.hpp  iterator.hpp  match.hpp  pattern.hpp  slice.hpp  walker.hpp
include/aster/unix/: traversal.hpp
include/aster/win32/: traversal.hpp
tests/: CMakeLists.txt
tests/source/: tests.cpp
